--- a/package.json
+++ b/package.json
@@ -13,18 +13,23 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.8",
+    "@mui/x-data-grid": "^5.17.23",
     "@reduxjs/toolkit": "^1.9.2",
     "axios": "^1.3.2",
+    "dayjs": "^1.11.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
-    "redux": "^4.2.1"
+    "react-to-print": "^2.14.11",
+    "redux": "^4.2.1",
+    "scss": "^0.2.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
+    "sass": "^1.58.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
