--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.3.2",
     "dayjs": "^1.11.7",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
+    "@types/react-color": "^3.0.6",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
     "sass": "^1.58.0",
